...
        centerTitle: true,
      ),
      body: _getBody(colorScheme, textTheme),
      floatingActionButton: Padding(
        padding: const EdgeInsets.symmetric(horizontal: 16),
        child: ButtonWidgetV2(
          key: const ValueKey("logInButton"),
          buttonType: ButtonTypeV2.primary,
          labelText: AppLocalizations.of(context).continueLabel,
          isDisabled: !_emailIsValid,
          onTap: _emailIsValid ? _onLoginPressed : null,
        ),
      ),
...
        padding: const EdgeInsets.symmetric(horizontal: 16),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            const SizedBox(height: 20),
            TextInputWidgetV2(
              key: const ValueKey("emailInputField"),
              label: AppLocalizations.of(context).email,
              hintText: AppLocalizations.of(context).enterYourEmailAddress,
              textEditingController: _emailController,
              keyboardType: TextInputType.emailAddress,
              autofillHints: const [AutofillHints.email],
              autoCorrect: false,
...
