...
                      }
                    : null,
              ),
              if (_treatAsOnboarding) ...[
                const SizedBox(height: 12),
                ButtonComponent(
                  key: const ValueKey("skipBackupButton"),
                  label: l10n.skip,
                  variant: ButtonComponentVariant.link,
                  size: ButtonComponentSize.small,
                  onTap: () async {
                    Navigator.of(context).pop(false);
                  },
...
